fixed comms and friends responsive layout issue

--- a/src/components/dynamic/CommunitiesList/CommunitiesList.css
+++ b/src/components/dynamic/CommunitiesList/CommunitiesList.css
@@ -1,7 +1,7 @@
 .commsPage{
 
     display:flex;
-     flex-direction: column;
+    flex-direction:column;
      align-items: center;
 
 }
@@ -10,6 +10,9 @@
     background: linear-gradient(rgb(17, 181, 93), rgba(12, 175, 88, 0.353)) 50%;
 
 }
+.commsCard{
+    width:40%;
+}
 .commsCardHeader{
     color:#085d19;
     padding:2px;
@@ -17,7 +20,7 @@
     border:solid black 1px;
     border-radius:10px;
     box-shadow: rgb(26, 2, 2) 5px, 5px, 0px, 5px;
-    min-width: 340px;
+    min-width: 140px;
     text-align: center;
     background-color: #bebebe;
 
