--- a/src/components/dynamic/FriendsList/FriendsList.css
+++ b/src/components/dynamic/FriendsList/FriendsList.css
@@ -10,11 +10,11 @@
     background: linear-gradient(rgb(17, 181, 93), rgba(12, 175, 88, 0.353)) 50%;
 }
 .friendCard {
-    width: 50%;
+    width: 90%;
     min-height: fit-content;
     min-width:fit-content;
     margin: 10px;
-    padding: 15px;
+    padding: 10px;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
@@ -44,6 +44,9 @@
 
 @media screen and (max-width:380px){ 
     .friendsContainer{
-        width:250px
+        max-width:250px
+    }
+    .friendCard{
+        min-width: 250px;
     }
 }
